# sprintcore

./: .gitignore  LICENSE  README.md  pyproject.toml
sprintcore/: main.py  prompt.txt
sprintcore/cli/: doc_embeddings.py  fix_bugs_agent.py  prd2story.py
sprintcore/core/: output_writer.py  parser.py
sprintcore/examples/: .env.example
sprintcore/examples/code-examples/tsx/blog-nextjs-ts/lib/: posts.ts
sprintcore/examples/code-examples/tsx/blog-nextjs-ts/pages/: index.tsx
sprintcore/examples/code-examples/tsx/blog-nextjs-ts/pages/blog/: [slug].tsx  index.tsx
sprintcore/examples/prd/: prd-flight-booking.docx  prd-flight-booking.md
sprintcore/tests/: test_output_writer.py  test_parser.py
