[project]
name = "sprintcore"
version = "0.1.7"
description = "SprintCore CLI: Convert PRDs into structured sprints. Fix bugs based on bug report"
authors = [{ name = "Spicewood Labs LLC", email = "contact@sprintcore.ai" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "openai",
  "python-dotenv",
  "pyyaml",
  "requests",
  "langchain",
  "langchain-openai",
  "faiss-cpu",
  "tqdm",
  "PyYAML",
  "rich",
  "anthropic",
  "tree-sitter==0.24.0",
  "tree-sitter-javascript==0.23.1",
  "tree-sitter-typescript==0.23.2",
  "tiktoken==0.9.0",
  "langchain-community"
]

[project.scripts]
sprintcore = "sprintcore.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

exclude = ["index*"]  # exclude these
